--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,8 +133,9 @@
             <a href="/">Todo</a>
             <a href="/logout">Log-out</a>
         </div>
+        
         <div class="username">
-            Welcome, {{name}}!
+            Welcome, <%= name %>
         </div>
     </nav>
     <div class="container">
