--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -88,6 +88,10 @@
 <body>
     <div class="container">
         <h2>Signup</h2>
+        <% if (error) { %>
+            <p style="color:red;"><%= error %></p>
+        <% } %>
+        
         <form action="/signup" method="post" id="signupForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
