--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -65,7 +65,7 @@
             <a href="/logout">Log-out</a>
         </div>
         <div class="username">
-            Welcome, {{name}}!
+            Welcome, <%= name %>
         </div>
     </nav>
     <div class="container">
