--- a/views/about.ejs
+++ b/views/about.ejs
@@ -36,14 +36,13 @@
             padding: 20px;
             border-radius: 8px;
             text-align: center;
-            box-shadow: 0px 10px 10px  rgba(0, 0, 0, 0.436);
+            box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.436);
         }
 
-        .username{
+        .username {
             color: #f0f0f0;
             margin-right: 30px;
         }
-        
     </style>
 </head>
 
@@ -57,15 +56,15 @@
             <a href="/logout">Log-out</a>
         </div>
         <div class="username">
-            Welcome, {{name}}!
+            Welcome, <%= name %>
         </div>
     </nav>
     <div class="container">
         <h1>About</h1>
         <p>
-            This is todo app<br/>
-            it's very easy to use you can add new tasks, delete the existing task or check the<br/>
-            status of the task<br/>
+            This is todo app<br />
+            it's very easy to use you can add new tasks, delete the existing task or check the<br />
+            status of the task<br />
         </p>
     </div>
 </body>
